# MLOPS_MLFactory_automatisation

./: .env.example  .gitignore  Dockerfile  Projet_2_1_MLFactory.md  README.md  docker-compose.full.yml  docker-compose.yml  main.py  prefect.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/source/: api.rst  architecture.md  conf.py  front.rst  guide.md  index.rst  modules.rst  train.rst
prometheus/: prometheus.yml
scripts/: generate_data.py
src/api/: Dockerfile  main.py
src/front/: Dockerfile  app.py
src/train/: train.py
src/worker/: tasks.py
tests/: test_api.py
